apps/homelab/jellyfleet/transmission/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  namespace: jellyfleet
  labels: &labels
    app.kubernetes.io/name: transmission
    app.kubernetes.io/component: media-automation
    app.kubernetes.io/instance: transmission
    app.kubernetes.io/part-of: jellyfleet
    app.kubernetes.io/version: "latest"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: transmission
      app.kubernetes.io/instance: transmission
  template:
    metadata:
      labels: *labels
    spec:
      nodeSelector:
        role: downloads-media
      containers:
        - name: transmission
          image: lscr.io/linuxserver/transmission:latest
          ports:
            - containerPort: 9091
              name: web
            - containerPort: 51413
              name: torrent
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
          livenessProbe:
            httpGet:
              path: /
              port: 9091
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /
              port: 9091
            initialDelaySeconds: 10
            periodSeconds: 20
            failureThreshold: 5
      volumes:
        - name: config
          hostPath:
            path: /data/configs/transmission
            type: DirectoryOrCreate
        - name: downloads
          hostPath:
            path: /data/torrents/downlodas
            type: DirectoryOrCreate
